--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,13 @@
   "recommendations": [
     "svelte.svelte-vscode",
     "tauri-apps.tauri-vscode",
-    "rust-lang.rust-analyzer"
+    "rust-lang.rust-analyzer",
+    "esbenp.prettier-vscode",
+    "dbaeumer.vscode-eslint",
+    "ms-vscode.vscode-typescript-next",
+    "bradlc.vscode-tailwindcss",
+    "ms-vscode.vscode-json",
+    "redhat.vscode-yaml",
+    "ms-vscode-remote.remote-containers"
   ]
 }
