--- a/package.json
+++ b/package.json
@@ -24,18 +24,18 @@
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.6",
     "@sveltejs/kit": "^2.9.0",
-    "@sveltejs/vite-plugin-svelte": "^5.0.0",
+    "@sveltejs/vite-plugin-svelte": "6.2.1",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^9.0.0",
-    "eslint-plugin-svelte": "^2.0.0",
+    "eslint-plugin-svelte": "3.12.5",
     "prettier": "^3.0.0",
     "prettier-plugin-svelte": "^3.0.0",
-    "svelte-eslint-parser": "^0.41.0",
+    "svelte-eslint-parser": "1.4.0",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
-    "typescript": "~5.6.2",
-    "vite": "^6.0.3",
+    "typescript": "5.9.3",
+    "vite": "7.1.12",
     "@tauri-apps/cli": "^2"
   }
 }
