--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,4 +25,20 @@ serde_json = "1"
 thiserror = "2.0.17"
 toml = "0.9.8"
 dirs = "6.0.0"
+# Rustic dependencies
+rustic_core = "0.8.0"
+rustic_backend = "0.5.3"
+librclone = "0.9.0"
+# Async runtime
+tokio = { version = "1", features = ["full"] }
+# Additional utilities
+anyhow = "1.0"
+tracing = "0.1"
+tracing-subscriber = "0.3"
+tokio-cron-scheduler = "0.15.0"
+keyring = "3.6.3"
+chrono = { version = "0.4", features = ["serde"] }
+
+[dev-dependencies]
+tempfile = "3.0"
 
