--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,8 +31,10 @@ rustic_backend = "0.5.3"
 librclone = "0.9.0"
 # Async runtime
 tokio = { version = "1", features = ["full"] }
+tokio-util = "0.7"
 # Additional utilities
 anyhow = "1.0"
+parking_lot = "0.12"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 tokio-cron-scheduler = "0.15.0"
