--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "format": "prettier --write 'src/**/*.{ts,svelte,css}'",
     "format:check": "prettier --check 'src/**/*.{ts,svelte,css}'",
     "type-check": "svelte-check --tsconfig ./tsconfig.json",
+    "tauri:dev": "WEBKIT_DISABLE_DMABUF_RENDERER=1 tauri dev",
+    "tauri:build": "WEBKIT_DISABLE_DMABUF_RENDERER=1 WEBKIT_DISABLE_COMPOSITING_MODE=1 cargo-tauri build",
     "tauri": "tauri"
   },
   "license": "MIT",
@@ -23,7 +25,7 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.6",
-    "@sveltejs/kit": "^2.9.0",
+    "@sveltejs/kit": "2.48.0",
     "@sveltejs/vite-plugin-svelte": "6.2.1",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
