--- a/package.json
+++ b/package.json
@@ -27,17 +27,21 @@
     "@sveltejs/adapter-static": "^3.0.6",
     "@sveltejs/kit": "2.48.0",
     "@sveltejs/vite-plugin-svelte": "6.2.1",
+    "@tauri-apps/cli": "^2",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/svelte": "^5.2.8",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^9.0.0",
     "eslint-plugin-svelte": "3.12.5",
+    "jsdom": "^27.0.1",
     "prettier": "^3.0.0",
     "prettier-plugin-svelte": "^3.0.0",
-    "svelte-eslint-parser": "1.4.0",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
+    "svelte-eslint-parser": "1.4.0",
     "typescript": "5.9.3",
     "vite": "7.1.12",
-    "@tauri-apps/cli": "^2"
+    "vitest": "^4.0.4"
   }
 }
