feat(dashboard): Complete mockup-compliant dashboard implementation
- DashboardPage with toolbar, repository grid, storage charts, activity log
- RepositoryCard with status badges, statistics, progress bars, actions
- StorageChart with SVG donut charts for usage visualization
- ActivityLog with colored log entries (info/warning/error)
- Responsive design for tablet/mobile breakpoints
- Pixel-perfect styling matching rustic_gui_mockup.html

--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
   "license": "MIT",
   "dependencies": {
     "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-opener": "^2"
+    "@tauri-apps/plugin-opener": "2.5.2"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.6",
-    "@sveltejs/kit": "2.48.0",
+    "@sveltejs/kit": "2.48.3",
     "@sveltejs/vite-plugin-svelte": "6.2.1",
     "@tauri-apps/cli": "^2",
     "@testing-library/jest-dom": "^6.9.1",
@@ -37,7 +37,7 @@
     "jsdom": "^27.0.1",
     "prettier": "^3.0.0",
     "prettier-plugin-svelte": "^3.0.0",
-    "svelte": "^5.0.0",
+    "svelte": "5.43.0",
     "svelte-check": "^4.0.0",
     "svelte-eslint-parser": "1.4.0",
     "typescript": "5.9.3",
