--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write 'src/**/*.{ts,svelte,css}'",
     "format:check": "prettier --check 'src/**/*.{ts,svelte,css}'",
     "type-check": "svelte-check --tsconfig ./tsconfig.json",
+    "test": "vitest run",
     "tauri:dev": "WEBKIT_DISABLE_DMABUF_RENDERER=1 tauri dev",
     "tauri:build": "WEBKIT_DISABLE_DMABUF_RENDERER=1 WEBKIT_DISABLE_COMPOSITING_MODE=1 cargo-tauri build",
     "tauri": "tauri"
