--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -41,6 +41,7 @@ tokio-cron-scheduler = "0.15.0"
 keyring = "3.6.3"
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.0", features = ["v4", "serde"] }
+ts-rs = { version = "11.1.0", features = ["serde-compat"] }
 
 [dev-dependencies]
 tempfile = "3.0"
