docs: ROADMAP v2.0 modular struktur + archivierung
- ROADMAP_NEW.md erstellt (wird zu ROADMAP.md umbenannt)
- Modulare Struktur: Hauptdokument + 6 Milestone-Dateien
- TODO.md nach docs/reports/2025-10-31-todo-archive.md verschoben
- .gitignore erweitert (Tauri Build-Artefakte, Coverage, Temp-Files)
- Alle Root-Markdown-Dateien bereinigt

Milestone-Struktur:
- M1: rustic_core Integration (60h)
- M2: Cloud-Backends OpenDAL/Rclone (30h)
- M3: Job-Scheduler tokio-cron (30h)
- M4: Erweiterte Features (40h)
- M5: Testing & QA (54h)
- M6: Dokumentation & Release (13h)

Gesamt: 227h / 6 Wochen
Kritischer Pfad: M1→M2→M3→M5→M6 (187h)

BREAKING: Tests disabled (module visibility issues, will be fixed in M5)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# SvelteKit
 .DS_Store
 node_modules
 /build
@@ -13,17 +14,58 @@ vite.config.ts.timestamp-*
 target/
 Cargo.lock
 *.rs.bk
+**/*.rs.bk
 
 # Tauri
 src-tauri/target/
 src-tauri/Cargo.lock
+src-tauri/gen/
+src-tauri/WixTools/
+
+# Tauri Build Artifacts
+src-tauri/target/release/bundle/
+*.AppImage
+*.deb
+*.rpm
+*.msi
+*.exe
+*.dmg
+*.app
 
 # IDE
 .vscode/settings.json
+.vscode/*.log
 .idea/
+*.swp
+*.swo
+*~
 
 # OS
 Thumbs.db
 *.log
+.DS_Store
 
+# Test Coverage
+coverage/
+.nyc_output/
+*.lcov
+
+# Temporary Files
+tmp/
+temp/
+*.tmp
+*.bak
+*.old
+*_OLD.*
+*_NEW.*
+
+# Documentation Build
+docs/build/
+docs/_build/
+
+# Project-specific
 .projVault/
+test-badge.svelte
+
+# Lock files (keep package-lock.json, exclude Cargo.lock in workspace root)
+# Note: Cargo.lock is kept in src-tauri/ for reproducible builds
