test: Alle 105 Tests aktiviert und erfolgreich (100% Pass-Rate)
- feat(stores): Store-Funktionen für backup-jobs hinzugefügt
  - addJob(): Fügt neuen Job zur Liste hinzu
  - updateJob(): Aktualisiert existierenden Job
  - removeJob(): Entfernt Job anhand ID

- test(backup-jobs): Alle 6 geskippten Tests aktiviert
  - addJob Tests: 2 Tests für Hinzufügen von Jobs
  - updateJob Tests: 2 Tests für Aktualisierung
  - removeJob Tests: 2 Tests für Entfernung
  - Behoben: Variable-Shadowing-Problem (jobs → initialJobs)

- test(Modal): Close-Button Test aktiviert
  - Neue ModalTestWrapper.svelte Komponente für Snippet-Support
  - Test nutzt Wrapper statt direktem Modal
  - Snippets können in Tests über Wrapper verwendet werden

- test: Svelte 5 Migration vollständig abgeschlossen
  - Migration von Svelte 4 createEventDispatcher zu Svelte 5 Callbacks
  - Alle Komponenten auf Runes migriert ($state, $derived)
  - Test-Infrastruktur optimiert (cleanup, waitFor, fake timers)

Ergebnis:
✅ Test Files: 8 passed (8)
✅ Tests: 105 passed (105)
✅ 0 skipped, 0 failures
✅ 100% Success Rate (vorher 93.3% mit 7 skipped)

Referenz: Phase 0 - Test-Infrastruktur vollständig abgeschlossen

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tauri-apps/cli": "^2",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/svelte": "^5.2.8",
+    "@types/node": "^24.9.2",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^9.0.0",
@@ -44,6 +45,6 @@
     "svelte-eslint-parser": "1.4.0",
     "typescript": "5.9.3",
     "vite": "7.1.12",
-    "vitest": "^4.0.4"
+    "vitest": "^4.0.0"
   }
 }
